Fix #21: Category view filtering
Squashed commit of the following:

commit f4253c236473b339f49bd2309246043d787da75d
Author: Caeglathatur <49456231+Caeglathatur@users.noreply.github.com>
Date:   Sat May 18 14:47:11 2019 +0200

    Enable filtering by untagged, work on styling

commit 597ee529f9534f37511f269a48b461492919ba93
Author: Caeglathatur <49456231+Caeglathatur@users.noreply.github.com>
Date:   Sat May 18 11:41:32 2019 +0200

    Refactor, support filters in Markdown view

commit 38bd0d56e4f059e2e897055c5caf942eeb00da41
Author: Caeglathatur <49456231+Caeglathatur@users.noreply.github.com>
Date:   Sat May 18 11:24:00 2019 +0200

    Filtering UI

commit c3a93a4be6acc20075a560b6efdcde95bf78dc35
Author: Caeglathatur <49456231+Caeglathatur@users.noreply.github.com>
Date:   Sat May 18 10:24:18 2019 +0200

    Set up filtering in category view

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -113,31 +113,33 @@ input, textarea, select {
 
 .browse-menu {
     margin-bottom: 40px;
-    display: block;
+    /* display: block; */
     overflow: hidden;
+    display: flex;
+    justify-content: flex-start;
+    flex-wrap: wrap;
 }
 
 .browse-menu .search {
-    float: right;
-    width: 400px;
-    max-width: 100%;
+    flex-grow: 1;
 }
 
 .browse-menu .search form {
-    display: inline;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
 }
 
 .browse-menu .search input[type=search] {
+    display: inline-block;
+    flex-grow: 1;
     margin: 2.5px;
     padding: 10px 15px;
-    width: 300px;
-    max-width: 100%;
     line-height: 27.5px;
     border-radius: var(--border-radius);
     border: none;
     color: var(--text-color);
-    background-color: var(--highlight-bg-color)
-
+    background-color: var(--highlight-bg-color);
 }
 
 .browse-menu a:link, .browse-menu a:visited, .browse-menu .search input[type=submit] {
@@ -162,8 +164,35 @@ input, textarea, select {
     color: var(--text-color);
 }
 
-.category-tree {
+.categories-options {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+
+.categories-options .category-tree {
+    margin-right: 25px;
     margin-bottom: 40px;
+    flex-grow: 3;
+}
+
+.categories-options .filters {
+    flex-grow: 1;
+    background-color: var(--light-bg-color);
+    border-radius: var(--border-radius);
+    padding: 10px 15px;
+    margin-bottom: 40px;
+}
+
+.filters h4 {
+    margin: 0;
+}
+
+.filters input[type=submit] {
+    margin-right: 10px;
+    cursor: pointer;
 }
 
 .entry-note {
